--- a/test-cases.yml
+++ b/test-cases.yml
@@ -277,10 +277,15 @@
   test-data: |
     No data
   steps:
-    - Нажать кнопку «Create game»
-    - Нажать кнопку «Create battle»
+    - Нажать на кнопку создания игры
+    - Уровень игры оставляем дефолтным
+    - Выбрать тип соперника с другим пользователем
+    - Контроль времени дефолтный
+    - Тип задачи дефолтный
+    - Задача дефолтная
+    - Нажать на кнопку создания
   expected-result: |
-    Должна быть создана новая игра
+    Игра создана и появляется в лобби в списке других игр под вашим ником
 
 - summary: |
     Проверка приглашения друга в новую игру
@@ -292,12 +297,53 @@
   test-data: |
     No data
   steps:
-    - Нажать кнопку «Create game»
-    - Нажать кнопку «With a friend»
-    - Нажать кнопку "Greate invite"
+    - Нажать на кнопку создания игры
+    - Уровень игры оставляем дефолтным
+    - Выбрать тип соперника с другом
+    - Контроль времени дефолтный
+    - Выбираем оппонента из списка
+    - Тип задачи дефолтный
+    - Задача дефолтная
+    - Нажать на кнопку создать приглашение
   expected-result: |
-    Друг должен получить приглашение в новую игру
+     На главной странице в чате появляется "вы пригласили друга в игру"
 
+- summary: |
+    Проверка успешного подключения к игре с другом
+  requirement: |
+    Пользователь должен принять приглашение и подключиться к игре
+  prerequisites:
+    Пользователь1 авторизован под логином = kelevro342
+    Создано приглашение другу vladimir342
+  test-data: |
+    No data
+  steps:
+    - Открыть другой браузер
+    - Перейти по https://codebattle.hexlet.io/
+    - Авторизовать пользователя2 под логином vladimir342
+    - Найти приглашение созданное игроком kelevro342
+    - Нажать прянять приглашение
+  expected-result: |
+     Загружена страница для написания кода у обоих пользователей, игра запущена
+
+- summary: |
+    Проверка успешного подключения в игре с другим игроком
+  requirement: |
+    Пользователь должен успешно подключаться к созданной игре, отображённой в лобби
+  prerequisites: |
+    Пользователь1 авторизован под логином kelevro342
+    открыта главная страница, игра создана и отображается в лобби
+  test-data: |
+    none
+  steps: 
+    - Открыть другой браузер
+    - Перейти по https://codebattle.hexlet.io/
+    - Авторизовать пользователя2 под логином vladimir342
+    - Найти в лобби игру, созданную игроком kelevro342
+    - Нажать Fight
+  expected-result: |
+    Загружена страница для написания кода у обоих пользователей, игра запущена
+     
 - summary: |
     Проверка создания новой игры с ботом, авторизованным пользователем
   requirement: |
@@ -308,11 +354,15 @@
   test-data: |
     No data
   steps:
-    - Нажать кнопку «Create game»
-    - Нажать кнопку "With a bot"
-    - Нажать кнопку «Create battle»
+    - Нажать на кнопку создания игры
+    - Уровень игры оставляем дефолтным
+    - Выбрать тип соперника с ботом
+    - Контроль времени дефолтный
+    - Тип задачи дефолтный
+    - Задача дефолтная
+    - Нажать на кнопку создания
   expected-result: |
-    Должна быть создана новая игра c ботом
+    Открывается окно новой игры с ботом
 
 - summary: |
     Проверка возможности сдачи в игре
@@ -324,14 +374,18 @@
   test-data: |
     No data
   steps:
-    - Нажать кнопку «Create game»
-    - Нажать кнопку "With a bot"
-    - Нажать кнопку «Create battle»
-    - Нажать кнопку "Other actions"
-    - Нажать кнопку "Give up"
-    - В появившемся окне нажать "Give up"
+    - Нажать на кнопку создания игры
+    - Уровень игры оставляем дефолтным
+    - Выбрать тип соперника с ботом
+    - Контроль времени дефолтный
+    - Тип задачи дефолтный
+    - Задача дефолтная
+    - Нажать на кнопку создания
+    - Нажать в игре кнопку другие действия
+    - Нажать сдаться
+    - В подтверждении нажать сдаться
   expected-result: |
-    Пользователь сдаётся, игра завершается
+    Пользователь сдаётся, на странице игры появляется уведомление "If you read this you've lost the game"
 
 - summary: |
     Проверка выбора сложности игры при создании игры
@@ -343,14 +397,18 @@
   test-data: |
     No data
   steps:
-    - Нажать кнопку «Create game»
-    - Нажать кнопку уровня игры
-    - Нажать кнопку «Create battle»
+    - Нажать на кнопку создания игры
+    - Уровень игры сложный
+    - Выбрать тип соперника с ботом
+    - Контроль времени дефолтный
+    - Тип задачи дефолтный
+    - Задача дефолтная
+    - Нажать на кнопку создания
   expected-result: |
     Должна быть создана новая игра с выбранным уровнем сложности
 
 - summary: |
-    Проварка выбора продолжительности игры
+    Проверка выбора продолжительности игры
   requirement: 
     Пользователь должен иметь возможность выбрать продолжительность игры
   prerequisites:
@@ -359,9 +417,13 @@
   test-data: |
     No data
   steps:
-    - Нажать кнопку «Create game»
-    - Выбрать продолжительность игры
-    - Нажать кнопку «Create battle»
+    - Нажать на кнопку создания игры
+    - Уровень игры оставляем дефолтным
+    - Выбрать тип соперника с ботом
+    - Контроль времени ставим 30 мин
+    - Тип задачи дефолтный
+    - Задача дефолтная
+    - Нажать на кнопку создания
   expected-result: |
     Должна быть создана новая игра с выбранной продолжительностью игры
 
@@ -375,9 +437,12 @@
   test-data: |
     No data
   steps:
-    - Нажать кнопку «Create game»
-    - Выбрать с помощью меню решаемую задачу
-    - Нажать кнопку «Create battle»
+    - Нажать на кнопку создания игры
+    - Уровень игры оставляем дефолтным
+    - Выбрать тип соперника с ботом
+    - Контроль времени дефолтный
+    - Тип задачи выбираем по имени любую
+    - Нажать на кнопку создания
   expected-result: |
     Должна быть создана новая игра с выбранной по названию задачей
 
@@ -391,29 +456,14 @@
   test-data: |
     No data
   steps:
-    - Нажать кнопку «Create game»
-    - Выбрать с помощью тега задачу
-    - Нажать кнопку «Create battle»
+    - Нажать на кнопку создания игры
+    - Уровень игры оставляем дефолтным
+    - Выбрать тип соперника с ботом
+    - Контроль времени дефолтный
+    - Тип задачи выбираем по тегу любую
+    - Нажать на кнопку создания
   expected-result: |
     Должна быть создана новая игра с выбранной по тегу задачей
-
-- summary: |
-    Проверка успешного подключения другого пользователя к созданной игре
-  requirement: |
-    Пользователь должен успешно подключаться к созданной игре, отображённой в лобби
-  prerequisites: |
-    Пользователь1 авторизован под логином = kelevro342@mail.ru, пароль = interarma342!, |
-    открыта главная страница, игра создана и отображается в лобби
-  test-data: |
-    none
-  steps: 
-    - Открыть другой браузер
-    - Перейти по https://codebattle.hexlet.io/
-    - Авторизовать пользователя2 под логином = kelevro0342@mail.ru, паролем = interarma342!
-    - Найти в лобби игру, созданную игроком kelevro342
-    - Нажать Fight
-  expected-result: |
-    Загружена страница для написания кода у обоих пользователей, игра запущена
 
 - summary: |
     Проверка успешного создания игры с максимально заданным временем
@@ -426,11 +476,10 @@
     time control = 60 min
   steps: 
     - Нажать на кнопку создания игры
-    - Выбрать уровень игры elementary
+    - Уровень игры оставляем дефолтным
     - Выбрать тип соперника с ботом
-    - Выбрать заданный контроль времени
-    - Выбрать тип задачи = math
-    - Выбрать задачу = rect_area
+    - Контроль времени ставим 60 min
+    - Тип задачи оставляем дефолтным
     - Нажать на кнопку создания
   expected-result: |
     Игра создана, открыта страница игры, таймер ведёт обратный отсчёт от 60 минут
@@ -446,11 +495,10 @@
     time control = 3 min
   steps: 
     - Нажать на кнопку создания игры
-    - Выбрать уровень игры elementary
+    - Уровень игры оставляем дефолтным
     - Выбрать тип соперника с ботом
-    - Выбрать заданный контроль времени
-    - Выбрать тип задачи = math
-    - Выбрать задачу = rect_area
+    - Контроль времени ставим 3 min
+    - Тип задачи оставляем дефолтным
     - Нажать на кнопку создания
   expected-result: |
     Игра создана, открыта страница игры, таймер ведёт обратный отсчёт от 3 минут
@@ -460,11 +508,18 @@
   requirement: |
     Пользователь должен иметь возможность выбирать язык программирования
   prerequisites: |
-    Пользователь авторизован, игра создана, открыт экран для написания кода
+    Пользователь авторизован
+    Открыта страница https://codebattle.hexlet.io/#lobby
   test-data: |
     none
   steps: 
-    - Нажать на кнопку выбора языка программирования и выбрыть С#
+    - Нажать на кнопку создания игры
+    - Уровень игры оставляем дефолтным
+    - Выбрать тип соперника с ботом
+    - Контроль времени оставляем дефолтным
+    - Тип задачи оставляем дефолтным
+    - Нажать на кнопку создания
+    - В списке языков программирования выбираем С#
   expected-result: |
     Язык изменён, в поле для написания кода отображается синтаксис языка C#
 
@@ -486,12 +541,19 @@
   requirement: |
     При записи правильного решения, игра завершена, игрок побеждает
   prerequisites: |
-    Игра создана выбрана задача rect_area, открыт экран для написания кода
+    Пользователь авторизован
+    Открыта страница https://codebattle.hexlet.io/#lobby
   test-data: |
     Запись = return width * length;
   steps: 
+    - Нажать на кнопку создания игры
+    - Уровень игры оставляем дефолтным
+    - Выбрать тип соперника с ботом
+    - Контроль времени оставляем дефолтным
+    - Тип задачи выбираем rect_area
+    - Нажать создать игру
     - Выбрать язык программирования Node.js
-    - В поле для ввода кода, сделать в 5 строке заданную запись
+    - В поле для ввода кода, сделать в 5 строке запись return width * length
     - Нажать на кнопку проверки решения
   expected-result: |
     Игра завершена, появляется уведомление о победе
@@ -501,13 +563,19 @@
   requirement: |
     При неправильном решении задачи, пользователь должен получить уведомление
   prerequisites: |
-    Игра создана, выбрана задача rect_area, открыт экран для написания кода
+    Пользователь авторизован
+    Открыта страница https://codebattle.hexlet.io/#lobby
   test-data: |
     Запись = return wi;
   steps: 
+    - Нажать на кнопку создания игры
+    - Уровень игры оставляем дефолтным
+    - Выбрать тип соперника с ботом
+    - Контроль времени оставляем дефолтным
+    - Тип задачи выбираем rect_area
+    - Нажать создать игру
     - Выбрать язык программирования Node.js
-    - В поле для ввода кода, сделать в 5 строке заданную запись
-    - Нажать на кнопку проверки решения
+    - В поле для ввода кода, сделать в 5 строке запись return wi
   expected-result: |
     Пользователь видит уведомление об ошибке - тесты не прошли
 
@@ -524,14 +592,15 @@
     - Нажать на иконку c вашим nickname в правом верхем углу экрана
     - Нажать на кнопку my profile
   expected-result: |
-    Открывается страница, где пользователь видит информацию о своём профиле, статистику игр, рейтинг.
+    Открывается страница, где пользователь видит информацию о своём профиле, статистику игр, рейтинг
 
 - summary: |
     Проверка на адаптивность под мобильные устройства
   requirement: |
     Сайт должен быть адаптирован под мобильные устройства
   prerequisites: |
-    В браузере Chrome, открыта главная страница
+    Пользователь авторизован
+    Открыта страница https://codebattle.hexlet.io/#lobby
   test-data: |
     Кнопка отображения на устройствах = Toggle device toolbar
     Разрешение экрана = 320x480 px
@@ -540,6 +609,22 @@
     - Нажать Toggle device toolbar
     - Нажать на responsive
     - Вводим заданное разрешение экрана
+    - Нажать на кнопку создания игры
+    - Уровень игры оставляем дефолтным
+    - Выбрать тип соперника с ботом
+    - Контроль времени оставляем дефолтным
+    - Тип задачи оставляем дефолтным
+    - Нажать на кнопку создания
+    - Нажать кнопку сдачи
+    - Нажать кнопку назад домой
+    - Нажать топ лист
+    - Вернуться на главную страницу
+    - Нажать История
+    - На любой история нажать показать 
+    - Нажать воспроизвести
+    - Вернуться на главную страницу
+    - Нажать на свой ник в верхнем правом углу
+    - Нажать мой профиль
   expected-result: |
     Все элементы на странице отображаются корректно
 
@@ -548,26 +633,30 @@
   requirement: |
     Сайт должен корректно открываться и функционировать с разных браузеров
   prerequisites: |
-    Открыт Firefox browser
+    Открыть Firefox browser
+    Пользователь авторизован
+    Открыта страница https://codebattle.hexlet.io/#lobby
   test-data: |
     Browser = Firefox browser 140.0.2 (64-разрядный)
   steps:
-    - Открыть https://codebattle.hexlet.io/#lobby
+    - Нажать на кнопку создания игры
+    - Уровень игры оставляем дефолтным
+    - Выбрать тип соперника с ботом
+    - Контроль времени оставляем дефолтным
+    - Тип задачи оставляем дефолтным
+    - Нажать на кнопку создания
+    - Нажать кнопку сдачи
+    - Нажать кнопку назад домой
+    - Нажать топ лист
+    - Вернуться на главную страницу
+    - Нажать История
+    - На любой история нажать показать 
+    - Нажать воспроизвести
+    - Вернуться на главную страницу
+    - Нажать на свой ник в верхнем правом углу
+    - Нажать мой профиль
   expected-result: |
     Корректно отображается сайт с Firefox browser
-
-- summary: |
-    Проверка входа с Opera One
-  requirement: |
-    Сайт должен корректно открываться и функционировать с разных браузеров
-  prerequisites: |
-    Открыт браузер Opera One
-  test-data: |
-    Browser = Opera One 120.0.5543.93
-  steps:
-    - Открыть https://codebattle.hexlet.io/#lobby
-  expected-result: |
-    Корректно отображается сайт с Opera One
 
 - summary: |
     Проверка на отсутсвие ошибок при загрузке страницы 
