--- a/test-cases.yml
+++ b/test-cases.yml
@@ -659,7 +659,37 @@
     Корректно отображается сайт с Firefox browser
 
 - summary: |
-    Проверка на отсутсвие ошибок при загрузке страницы 
+    Проверка входа с браузера Google Chrome
+  requirement: |
+    Сайт должен корректно открываться и функционировать с разных браузеров
+  prerequisites: |
+    Открыть Google Chrome
+    Пользователь авторизован
+    Открыта страница https://codebattle.hexlet.io/#lobby
+  test-data: |
+    Browser = Google Chrome Версия: 138.0.7204.159
+  steps:
+    - Нажать на кнопку создания игры
+    - Уровень игры оставляем дефолтным
+    - Выбрать тип соперника с ботом
+    - Контроль времени оставляем дефолтным
+    - Тип задачи оставляем дефолтным
+    - Нажать на кнопку создания
+    - Нажать кнопку сдачи
+    - Нажать кнопку назад домой
+    - Нажать топ лист
+    - Вернуться на главную страницу
+    - Нажать История
+    - На любой история нажать показать 
+    - Нажать воспроизвести
+    - Вернуться на главную страницу
+    - Нажать на свой ник в верхнем правом углу
+    - Нажать мой профиль
+  expected-result: |
+    Корректно отображается сайт с Google Chrome
+
+- summary: |
+    Проверка на отсутствие ошибок при загрузке страницы 
   requirement: |
     Загрузка страницы должна быть завершена без ошибок
   prerequisites: |
