--- a/testing-report.yml
+++ b/testing-report.yml
@@ -18,17 +18,17 @@
 - summary: |
     Проверка успешного входа пользователя с существующими email и паролем
   status: pass
-
+  
 - summary: |
-    Проверка невозможности регистрации с уже зарегестрированным email
+    Проверка невозможности входа пользователя с незарегистрированным email
   status: pass
 
 - summary: |
-     проверка невозможности регистрации с уже зарегестрированным nickname
+    Проверка невозможности входа пользователя с неправильным паролем
   status: pass
 
 - summary: |
-    Проверка входа пользователя с незарегистрированным email
+    Проверка восстановления пароля
   status: pass
 
 - summary: |
@@ -65,6 +65,14 @@
 
 - summary: |
     Проверка приглашения друга в новую игру
+  status: pass
+
+- summary: |
+    Проверка успешного подключения к игре с другом
+  status: pass
+
+- summary: |
+    Проверка успешного подключения в игре с другим игроком
   status: pass
 
 - summary: |
@@ -125,14 +133,14 @@
 
 - summary: |
     Проверка на адаптивность под мобильные устройства
-  status: pass
+  status: fail
 
 - summary: |
     Проверка входа с Firefox browser
   status: pass
 
 - summary: |
-    Проверка входа с Opera One
+    Проверка входа с Google Chrome
   status: pass
 
 - summary: |
